X-editable changelog
=============================


Version 1.2.1 wip
----------------------------  
[enh] 'submit' method changed: error-callback's parameter simplified (vitalets) 
[enh] 'submit' method changed: now when response 200 OK it does not set pk automatically, use success callback (vitalets) 
[enh] 'submit' method changed: removed dataType='json'. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
[enh] removed default ajax dataType='json'. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
[enh] select: do not show 'sourceError' in element during autotext execution (vitalets) 


Version 1.2.0 Dec 6, 2012
----------------------------  
[enh #36] 'submit' method: added 'ajaxOptions' property to modify ajax request (vitalets)  
[enh] inputs now internally use 'value2submit' method instead of previous 'value2str' (vitalets)  
[enh] editableContainer removed from docs (vitalets)  
[enh] editableContainer: removed 'autohide' option and 'cancel' event. Use 'hidden' event instead (vitalets)  
[enh] 'hidden' event: added param 'reason' that points to reason caused hiding (vitalets)  
[enh] 'select' submit by enter (vitalets)  
[bug #37] fix incorrectly shown datepicker in jquery 1.7.1 + webkit (vitalets)  
[enh] added url param 'jquery' to run tests in different versions of jquery, e.g. '&jquery=1.7.2' (vitalets)  
[enh] 'enablefocus' option removed. More efficient to use 'save/hide' events to set focus to any element (vitalets)  
[enh] 'init' event was added due to removal of render event (vitalets)  
[enh] 'render' event was removed, use 'display' callback instead (vitalets)  
[enh] 'checklist' submit value as array, not comma separated string (vitalets)  
[enh] 'checklist' was refactored: options 'viewseparator', 'limit', 'limitText' are supressed by 'display' callback (vitalets)  
[enh] new option: 'display' callback. Makes far more flexible rendering value into element's text. (vitalets)  
[bug] fix typos (atrophic) 